// project config
plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

project.ext {
   javaMainClass = 'dev.graumann.neuralnetwork.Main'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.reflections', name: 'reflections', version: '0.9.11'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
    implementation files('libs/javafx-gui-decorator-0.2.3-SNAPSHOT.jar')
}


// java & javafx config
javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}


// gradle task's

application {
    mainClass.set(javaMainClass)
}


jar {
    manifest {
        attributes 'Main-Class': javaMainClass
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ['-Xlint:deprecation', '-Xlint:unchecked']
}
